--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,11 +10,13 @@
   "author": "Balaji",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1467.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.1",
     "nodemon": "^3.0.1",
